# ECE365-DSA2

./: .gitignore.swp  CMakeLists.txt  Makefile  ece365_spellCheck.docx  test
dict/: small  wordlist_small
file/: .~lock.ece365_spellCheck.docx#  ece365_spellCheck.docx  ece365_useHeap_SR.txt  sampleIn.txt  test  testIn.txt  testIn2.txt  testout.txt  v1_out.txt  v5_out.txt
include/: dijkstra.h  findShortestPath.h  functions.h  hash.h  heap.h
src/: TogetherToTheEnd.cpp  dijkstra.cpp  findShortestPath.cpp  functions.cpp  hash.cpp  heap.cpp  main.cpp  spellcheck.cpp  useHeap.cpp
